added first version of chat

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -31,3 +31,18 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.Chat{
+  background: pink;
+}
+
+.right{
+  background:#ffffff70;
+  text-align: right;
+}
+
+
+.left{
+  background: #80808040;
+  text-align: left;
+}
