--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -9,14 +9,14 @@
 
 .App-header {
   background-color: #A5EFBD;
-  height: 20vh;
-  padding: 20px;
+  height: 10vh;
+  padding: 7px;
   color: black;
 }
 
 .App-header a {
   color: white;
-  padding: 0 5px;
+  padding: 5 5px;
 }
 
 .App-title {
@@ -32,12 +32,9 @@
   to { transform: rotate(360deg); }
 }
 
-.Chat{
-  background-image:url("../images/turqouise.png");
-}
 
 .right{
-  background:#fafafabe;
+  background: rgba(165, 239, 188, 0.562);
   text-align: right;
   border-radius: 25px;
   margin-right: 15px;
@@ -47,7 +44,7 @@
 
 
 .left{
-  background: #fafafabe;
+  background: rgba(114, 232, 224, 0.527);
   text-align: left;
   border-radius: 25px;
   margin-left: 15px;
@@ -61,15 +58,17 @@
 }
 
 .messagePreview{
-  background-color: #F5D5ED;
+  background-color:rgb(66, 66, 71);
   height:100vh;
   overflow-y: scroll;
+ 
 
 }
 
 .messageDetails {
   height:100vh;
   overflow-y: scroll;
+  background:white;
 
 }
 
@@ -96,6 +95,7 @@ h3 {
 
 .componentDisplay{
   padding:20px;
+  background:white;
 }
 
 .Login{
@@ -104,4 +104,5 @@ h3 {
 
 .Signup{
   padding:20vw;
+  background: #ed008c;
 }
