--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -18,7 +18,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #425cbb;
+  --primary: #A5EFBD;
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
@@ -137,12 +137,12 @@ sup {
   top: -.5em; }
 
 a {
-  color: #425cbb;
+  color: #A5EFBD;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects; }
   a:hover {
-    color: #2e4082;
+    color: #64e38d;
     text-decoration: underline; }
 
 a:not([href]):not([tabindex]) {
@@ -1079,13 +1079,13 @@ pre {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #cad1ec; }
+  background-color: #e6fbed; }
 
 .table-hover .table-primary:hover {
-  background-color: #b7c1e5; }
+  background-color: #d0f7dd; }
   .table-hover .table-primary:hover > td,
   .table-hover .table-primary:hover > th {
-    background-color: #b7c1e5; }
+    background-color: #d0f7dd; }
 
 .table-secondary,
 .table-secondary > th,
@@ -1269,9 +1269,9 @@ pre {
   .form-control:focus {
     color: #495057;
     background-color: #fff;
-    border-color: #9faddd;
+    border-color: white;
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(66, 92, 187, 0.25); }
+    box-shadow: 0 0 0 0.2rem rgba(165, 239, 189, 0.25); }
   .form-control::placeholder {
     color: #6c757d;
     opacity: 1; }
@@ -1638,7 +1638,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
     text-decoration: none; }
   .btn:focus, .btn.focus {
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(66, 92, 187, 0.25); }
+    box-shadow: 0 0 0 0.2rem rgba(165, 239, 189, 0.25); }
   .btn.disabled, .btn:disabled {
     opacity: 0.65; }
   .btn:not(:disabled):not(.disabled) {
@@ -1651,27 +1651,27 @@ fieldset:disabled a.btn {
   pointer-events: none; }
 
 .btn-primary {
-  color: #fff;
-  background-color: #425cbb;
-  border-color: #425cbb; }
+  color: #212529;
+  background-color: #A5EFBD;
+  border-color: #A5EFBD; }
   .btn-primary:hover {
-    color: #fff;
-    background-color: #384e9f;
-    border-color: #354995; }
+    color: #212529;
+    background-color: #85e9a5;
+    border-color: #7ae79d; }
   .btn-primary:focus, .btn-primary.focus {
-    box-shadow: 0 0 0 0.2rem rgba(66, 92, 187, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(165, 239, 189, 0.5); }
   .btn-primary.disabled, .btn-primary:disabled {
-    color: #fff;
-    background-color: #425cbb;
-    border-color: #425cbb; }
+    color: #212529;
+    background-color: #A5EFBD;
+    border-color: #A5EFBD; }
   .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
   .show > .btn-primary.dropdown-toggle {
-    color: #fff;
-    background-color: #354995;
-    border-color: #31458c; }
+    color: #212529;
+    background-color: #7ae79d;
+    border-color: #6fe595; }
     .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-primary.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0.2rem rgba(66, 92, 187, 0.5); }
+      box-shadow: 0 0 0 0.2rem rgba(165, 239, 189, 0.5); }
 
 .btn-secondary {
   color: #fff;
@@ -1835,27 +1835,27 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5); }
 
 .btn-outline-primary {
-  color: #425cbb;
+  color: #A5EFBD;
   background-color: transparent;
   background-image: none;
-  border-color: #425cbb; }
+  border-color: #A5EFBD; }
   .btn-outline-primary:hover {
-    color: #fff;
-    background-color: #425cbb;
-    border-color: #425cbb; }
+    color: #212529;
+    background-color: #A5EFBD;
+    border-color: #A5EFBD; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
-    box-shadow: 0 0 0 0.2rem rgba(66, 92, 187, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(165, 239, 189, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #425cbb;
+    color: #A5EFBD;
     background-color: transparent; }
   .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
   .show > .btn-outline-primary.dropdown-toggle {
-    color: #fff;
-    background-color: #425cbb;
-    border-color: #425cbb; }
+    color: #212529;
+    background-color: #A5EFBD;
+    border-color: #A5EFBD; }
     .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-primary.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0.2rem rgba(66, 92, 187, 0.5); }
+      box-shadow: 0 0 0 0.2rem rgba(165, 239, 189, 0.5); }
 
 .btn-outline-secondary {
   color: #6c757d;
@@ -2020,10 +2020,10 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #425cbb;
+  color: #A5EFBD;
   background-color: transparent; }
   .btn-link:hover {
-    color: #2e4082;
+    color: #64e38d;
     text-decoration: underline;
     background-color: transparent;
     border-color: transparent; }
@@ -2231,7 +2231,7 @@ input[type="button"].btn-block {
   .dropdown-item.active, .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #425cbb; }
+    background-color: #A5EFBD; }
   .dropdown-item.disabled, .dropdown-item:disabled {
     color: #6c757d;
     background-color: transparent; }
@@ -2471,12 +2471,12 @@ input[type="button"].btn-block {
   opacity: 0; }
   .custom-control-input:checked ~ .custom-control-label::before {
     color: #fff;
-    background-color: #425cbb; }
+    background-color: #A5EFBD; }
   .custom-control-input:focus ~ .custom-control-label::before {
-    box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(66, 92, 187, 0.25); }
+    box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(165, 239, 189, 0.25); }
   .custom-control-input:active ~ .custom-control-label::before {
     color: #fff;
-    background-color: #c5cdeb; }
+    background-color: white; }
   .custom-control-input:disabled ~ .custom-control-label {
     color: #6c757d; }
     .custom-control-input:disabled ~ .custom-control-label::before {
@@ -2512,34 +2512,34 @@ input[type="button"].btn-block {
   border-radius: 0.25rem; }
 
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #425cbb; }
+  background-color: #A5EFBD; }
 
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E"); }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  background-color: #425cbb; }
+  background-color: #A5EFBD; }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 4'%3E%3Cpath stroke='%23fff' d='M0 2h4'/%3E%3C/svg%3E"); }
 
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(66, 92, 187, 0.5); }
+  background-color: rgba(165, 239, 189, 0.5); }
 
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(66, 92, 187, 0.5); }
+  background-color: rgba(165, 239, 189, 0.5); }
 
 .custom-radio .custom-control-label::before {
   border-radius: 50%; }
 
 .custom-radio .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #425cbb; }
+  background-color: #A5EFBD; }
 
 .custom-radio .custom-control-input:checked ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='3' fill='%23fff'/%3E%3C/svg%3E"); }
 
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(66, 92, 187, 0.5); }
+  background-color: rgba(165, 239, 189, 0.5); }
 
 .custom-select {
   display: inline-block;
@@ -2555,9 +2555,9 @@ input[type="button"].btn-block {
   border-radius: 0.25rem;
   appearance: none; }
   .custom-select:focus {
-    border-color: #9faddd;
+    border-color: white;
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(159, 173, 221, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5); }
     .custom-select:focus::-ms-value {
       color: #495057;
       background-color: #fff; }
@@ -2598,10 +2598,10 @@ input[type="button"].btn-block {
   margin: 0;
   opacity: 0; }
   .custom-file-input:focus ~ .custom-file-label {
-    border-color: #9faddd;
-    box-shadow: 0 0 0 0.2rem rgba(66, 92, 187, 0.25); }
+    border-color: white;
+    box-shadow: 0 0 0 0.2rem rgba(165, 239, 189, 0.25); }
     .custom-file-input:focus ~ .custom-file-label::after {
-      border-color: #9faddd; }
+      border-color: white; }
   .custom-file-input:disabled ~ .custom-file-label {
     background-color: #e9ecef; }
   .custom-file-input:lang(en) ~ .custom-file-label::after {
@@ -2649,7 +2649,7 @@ input[type="button"].btn-block {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #425cbb;
+    background-color: #A5EFBD;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2659,9 +2659,9 @@ input[type="button"].btn-block {
         transition: none; } }
     .custom-range::-webkit-slider-thumb:focus {
       outline: none;
-      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(66, 92, 187, 0.25); }
+      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(165, 239, 189, 0.25); }
     .custom-range::-webkit-slider-thumb:active {
-      background-color: #c5cdeb; }
+      background-color: white; }
   .custom-range::-webkit-slider-runnable-track {
     width: 100%;
     height: 0.5rem;
@@ -2673,7 +2673,7 @@ input[type="button"].btn-block {
   .custom-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #425cbb;
+    background-color: #A5EFBD;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2683,9 +2683,9 @@ input[type="button"].btn-block {
         transition: none; } }
     .custom-range::-moz-range-thumb:focus {
       outline: none;
-      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(66, 92, 187, 0.25); }
+      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(165, 239, 189, 0.25); }
     .custom-range::-moz-range-thumb:active {
-      background-color: #c5cdeb; }
+      background-color: white; }
   .custom-range::-moz-range-track {
     width: 100%;
     height: 0.5rem;
@@ -2697,7 +2697,7 @@ input[type="button"].btn-block {
   .custom-range::-ms-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #425cbb;
+    background-color: #A5EFBD;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2707,9 +2707,9 @@ input[type="button"].btn-block {
         transition: none; } }
     .custom-range::-ms-thumb:focus {
       outline: none;
-      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(66, 92, 187, 0.25); }
+      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(165, 239, 189, 0.25); }
     .custom-range::-ms-thumb:active {
-      background-color: #c5cdeb; }
+      background-color: white; }
   .custom-range::-ms-track {
     width: 100%;
     height: 0.5rem;
@@ -2781,7 +2781,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #425cbb; }
+  background-color: #A5EFBD; }
 
 .nav-fill .nav-item {
   flex: 1 1 auto;
@@ -3282,19 +3282,19 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #425cbb;
+  color: #A5EFBD;
   background-color: #fff;
   border: 1px solid #dee2e6; }
   .page-link:hover {
     z-index: 2;
-    color: #2e4082;
+    color: #64e38d;
     text-decoration: none;
     background-color: #e9ecef;
     border-color: #dee2e6; }
   .page-link:focus {
     z-index: 2;
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(66, 92, 187, 0.25); }
+    box-shadow: 0 0 0 0.2rem rgba(165, 239, 189, 0.25); }
   .page-link:not(:disabled):not(.disabled) {
     cursor: pointer; }
 
@@ -3310,8 +3310,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 1;
   color: #fff;
-  background-color: #425cbb;
-  border-color: #425cbb; }
+  background-color: #A5EFBD;
+  border-color: #A5EFBD; }
 
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -3369,12 +3369,12 @@ input[type="button"].btn-block {
   border-radius: 10rem; }
 
 .badge-primary {
-  color: #fff;
-  background-color: #425cbb; }
+  color: #212529;
+  background-color: #A5EFBD; }
   .badge-primary[href]:hover, .badge-primary[href]:focus {
-    color: #fff;
+    color: #212529;
     text-decoration: none;
-    background-color: #354995; }
+    background-color: #7ae79d; }
 
 .badge-secondary {
   color: #fff;
@@ -3469,13 +3469,13 @@ input[type="button"].btn-block {
     color: inherit; }
 
 .alert-primary {
-  color: #223061;
-  background-color: #d9def1;
-  border-color: #cad1ec; }
+  color: #567c62;
+  background-color: #edfcf2;
+  border-color: #e6fbed; }
   .alert-primary hr {
-    border-top-color: #b7c1e5; }
+    border-top-color: #d0f7dd; }
   .alert-primary .alert-link {
-    color: #151d3b; }
+    color: #415e4a; }
 
 .alert-secondary {
   color: #383d41;
@@ -3561,7 +3561,7 @@ input[type="button"].btn-block {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #425cbb;
+  background-color: #A5EFBD;
   transition: width 0.6s ease; }
   @media screen and (prefers-reduced-motion: reduce) {
     .progress-bar {
@@ -3622,8 +3622,8 @@ input[type="button"].btn-block {
   .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #425cbb;
-    border-color: #425cbb; }
+    background-color: #A5EFBD;
+    border-color: #A5EFBD; }
 
 .list-group-flush .list-group-item {
   border-right: 0;
@@ -3637,15 +3637,15 @@ input[type="button"].btn-block {
   border-bottom: 0; }
 
 .list-group-item-primary {
-  color: #223061;
-  background-color: #cad1ec; }
+  color: #567c62;
+  background-color: #e6fbed; }
   .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-    color: #223061;
-    background-color: #b7c1e5; }
+    color: #567c62;
+    background-color: #d0f7dd; }
   .list-group-item-primary.list-group-item-action.active {
     color: #fff;
-    background-color: #223061;
-    border-color: #223061; }
+    background-color: #567c62;
+    border-color: #567c62; }
 
 .list-group-item-secondary {
   color: #383d41;
@@ -4275,12 +4275,12 @@ button.close {
   vertical-align: text-top !important; }
 
 .bg-primary {
-  background-color: #425cbb !important; }
+  background-color: #A5EFBD !important; }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #354995 !important; }
+  background-color: #7ae79d !important; }
 
 .bg-secondary {
   background-color: #6c757d !important; }
@@ -4375,7 +4375,7 @@ button.bg-dark:focus {
   border-left: 0 !important; }
 
 .border-primary {
-  border-color: #425cbb !important; }
+  border-color: #A5EFBD !important; }
 
 .border-secondary {
   border-color: #6c757d !important; }
@@ -6179,10 +6179,10 @@ button.bg-dark:focus {
   color: #fff !important; }
 
 .text-primary {
-  color: #425cbb !important; }
+  color: #A5EFBD !important; }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #354995 !important; }
+  color: #7ae79d !important; }
 
 .text-secondary {
   color: #6c757d !important; }
