--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -37,9 +37,17 @@
   background: rgba(165, 239, 188, 0.562);
   text-align: right;
   border-radius: 25px;
-  margin-right: 15px;
+  margin-right: 10px;
   padding-right: 5px;
 
+}
+
+.right p{
+  padding: 13px;
+}
+
+.left p{
+  padding: 13px;
 }
 
 
@@ -47,7 +55,7 @@
   background: rgba(114, 232, 224, 0.527);
   text-align: left;
   border-radius: 25px;
-  margin-left: 15px;
+  margin-left: 10px;
   padding-left: 5px;
 
 }
