--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -12,6 +12,11 @@
   height: 10vh;
   padding: 7px;
   color: black;
+  display: none; 
+}
+
+.userName{
+  color: #A5EFBD;
 }
 
 .App-header a {
@@ -34,7 +39,7 @@
 
 
 .right{
-  background: rgba(165, 239, 188, 0.562);
+  background: rgba(158, 158, 158, 0.562);
   text-align: right;
   border-radius: 25px;
   margin-right: 10px;
@@ -53,7 +58,7 @@
 
 
 .left{
-  background: rgba(114, 232, 224, 0.527);
+  background: rgba(255, 255, 255, 0.733);
   text-align: left;
   border-radius: 25px;
   margin-left: 10px;
@@ -68,9 +73,10 @@
 }
 
 .messagePreview{
-  background-color:rgb(66, 66, 71);
+  background-color:#C6C6C6;
   height:100vh;
   overflow-y: scroll;
+  padding: 2rem;
  
 
 }
@@ -80,6 +86,7 @@
   overflow-y: scroll;
   background:white;
   padding: 15px;
+background-image:  linear-gradient( 0.1deg,  #A5EFBD 30%,#72e8e1 99.9% )
 
 }
 
@@ -120,4 +127,40 @@ h3 {
 
 p{
   font-style: caption;
+}
+
+.btn-secondary {
+  background-color: #4DCBE0;
+  border-color: #4DCBE0;
+  border-radius: 20px;
+  width: 22%;
+}
+
+.MessageList{
+
+  margin-top: 2rem;
+
+}
+
+.chatInput{
+  border-radius: 20px;
+}
+
+.btn-primary{
+  border-radius: 20px;
+}
+
+.conversationNames{
+  background: rgba(255, 255, 255, 0.452);
+  border-radius: 20px;
+
+}
+.conversationNames p{
+  color: rgb(70, 70, 70)
+
+}
+
+p{
+  color: rgb(70, 70, 70)
+
 }
