--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -100,6 +100,8 @@ background-image:  linear-gradient( 0.1deg,  #A5EFBD 30%,#72e8e1 99.9% )
 
 body{
   height:100vh;
+  background: url(https://i.imgur.com/51p5SCq.gif) repeat center fixed;
+
 }
 
 h1 {
@@ -133,7 +135,6 @@ p{
   background-color: #4DCBE0;
   border-color: #4DCBE0;
   border-radius: 20px;
-  width: 22%;
 }
 
 .MessageList{
