--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -73,7 +73,7 @@
 }
 
 .messagePreview{
-  background-color:#C6C6C6;
+  background-color:#a5efbd;
   height:100vh;
   overflow-y: scroll;
   padding: 2rem;
@@ -85,8 +85,9 @@
   height:100vh;
   overflow-y: scroll;
   background:white;
-  padding: 15px;
-background-image:  linear-gradient( 0.1deg,  #A5EFBD 30%,#72e8e1 99.9% )
+background-image: linear-gradient( 0.1deg,  #72E8C2 30%,#ECB1E7 99.9% );
+border-color: white;
+    border-style: dashed;
 
 }
 
@@ -106,6 +107,7 @@ body{
 
 h1 {
   font-family: 'Bungee Shade', cursive;
+  color: black;
 }
 
 h3 {
@@ -132,8 +134,8 @@ p{
 }
 
 .btn-secondary {
-  background-color: #4DCBE0;
-  border-color: #4DCBE0;
+  background-color: rgba(59, 55, 55, 0.445);
+  border-color: rgb(116, 117, 117);
   border-radius: 20px;
 }
 
@@ -153,7 +155,6 @@ p{
 
 .conversationNames{
   background: rgba(255, 255, 255, 0.452);
-  border-radius: 20px;
 
 }
 .conversationNames p{
@@ -164,4 +165,8 @@ p{
 p{
   color: rgb(70, 70, 70)
 
+}
+
+.bye{
+  color: black; 
 }
