--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -83,7 +83,7 @@
   height: 100vh;
   overflow-y: scroll;
   background: white;
-  background-image: linear-gradient(0.1deg, #a5efbd 30%, #ecb1e7 99.9%);
+  background-image: linear-gradient(0.1deg, #a5efbd 30%, #4DCBE0 99.9%);
   border-color: white;
   border-style: dashed;
   padding: 0;
